<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.activities.SignUpActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tv_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textAlignment="center"
        android:textSize="30dp"
        />

    <EditText
        android:id="@+id/et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/shape_button"
        />

    <TextView
        android:id="@+id/tv_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:textStyle="italic"
        android:padding="16dp"
        android:layout_marginTop="4dp"
        android:layout_gravity="center"/>

</LinearLayout>