<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.activities.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signIn"
                android:textAlignment="center"
                android:textSize="30dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_email"
                android:hint="@string/email"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_below="@+id/tv_signIn"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_password"
                android:hint="@string/password"
                android:layout_below="@+id/et_email"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cb_keepConnect"
                android:text="@string/keepConnect"
                android:layout_below="@+id/et_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:layout_below="@+id/cb_keepConnect"
                android:layout_marginTop="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/shape_button"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_register"
                android:text="@string/signUp"
                android:padding="16dp"
                android:gravity="center"
                android:layout_below="@+id/btn_login"
                android:textStyle="italic"
                />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>