<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.fragments.AddTaskDialogFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/tv_newTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newTask"
            android:textAlignment="center"
            android:textSize="30dp"
            />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_taskTitle"
        android:layout_below="@+id/tv_newTask"
        android:hint="@string/taskTitle"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_taskPriority"
        android:hint="@string/taskPriority"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/et_taskTitle"
        />



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_addTask"
            android:text="@string/bt_addTask"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_below="@+id/et_taskPriority"
            app:icon="@drawable/ic_add"
            app:iconGravity="textStart"
            android:background="@drawable/shape_button"
            />


    </RelativeLayout>

</FrameLayout>