<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.fragments.HomeFragment">


    <EditText
        android:id="@+id/et_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_addTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_List"
        android:layout_width="411dp"
        android:layout_height="380dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tv_fragmentNeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/In"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_sacrifice"
        app:layout_constraintEnd_toStartOf="@+id/tv_zero"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        />

    <TextView
        android:id="@+id/tv_zero"
        android:layout_width="14dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:text="@string/zero"

        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_sacrifice"
        app:layout_constraintEnd_toStartOf="@+id/tv_months"
        app:layout_constraintStart_toEndOf="@id/tv_fragmentNeed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/tv_months"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/months"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_sacrifice"
        app:layout_constraintEnd_toStartOf="@+id/tv_headerFragment"
        app:layout_constraintStart_toEndOf="@+id/tv_zero"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        />

    <TextView
        android:id="@+id/tv_headerFragment"
        android:layout_width="wrap_content"
        android:layout_height="30dp"

        android:layout_marginEnd="16dp"


        android:freezesText="false"
        android:text="@string/headerHomeFragment"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_sacrifice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_months"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/tv_sacrifice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/sacrificeFragment"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_priority"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_addTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addNewTask"
        app:layout_constraintBottom_toTopOf="@+id/rv_List"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>