<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_weight="0.6"
            >


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                >


                <TextView
                    android:id="@+id/tv_incomings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/incomings"
                    android:textAlignment="center"
                    android:textSize="24dp"
                    android:layout_marginTop="20dp"
                    />

                <TextView
                    android:id="@+id/tv_incomingsAmounts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_incomings"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="24dp"
                    android:layout_marginTop="10dp"
                    />

                <Button
                    android:id="@+id/btn_changeIncomings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_incomingsAmounts"
                    android:text="@string/modify"
                    android:background="@drawable/shape_button"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    />


                <TextView
                    android:id="@+id/tv_outcomings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_changeIncomings"
                    android:text="@string/outcomings"
                    android:textAlignment="center"
                    android:textSize="24dp"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:id="@+id/tv_outcomingsAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_outcomings"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="24dp"
                    android:layout_marginTop="10dp"
                    />

                <Button
                    android:id="@+id/btn_changeOutcomings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_outcomingsAmount"
                    android:text="@string/modify"
                    android:background="@drawable/shape_button"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:id="@+id/tv_balance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_changeOutcomings"
                    android:text="@string/balance"
                    android:textAlignment="center"
                    android:textSize="24dp"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:id="@+id/tv_balanceAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_balance"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="24dp"
                    android:layout_marginTop="10dp"
                    />




            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/tv_savings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/savings"
                    android:textSize="36dp"
                    android:textAlignment="center"
                    />

                <TextView
                    android:id="@+id/tv_savingsAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:layout_below="@+id/tv_savings"
                    android:textSize="24dp"
                    android:textAlignment="center"
                    android:padding="15dp"
                    />

                <Button
                    android:id="@+id/btn_savingsModify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_savingsAmount"
                    android:text="@string/modify"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/shape_button"
                    >

                </Button>

                <TextView
                    android:id="@+id/tv_goal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goal"
                    android:layout_below="@+id/btn_savingsModify"
                    android:textSize="36dp"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    />

                <TextView
                    android:id="@+id/tv_goalAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:layout_below="@+id/tv_goal"
                    android:textSize="24dp"
                    android:textAlignment="center"
                    android:padding="15dp"
                    />

                <Button
                    android:id="@+id/btn_goalModify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_goalAmount"
                    android:text="@string/modify"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/shape_button"
                    >

                </Button>

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/reason"
            android:textSize="19dp"
            android:layout_weight="0.15"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            app:boxBackgroundMode="outline"
            android:hint="Why i do this?"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</FrameLayout>